<resources>
    <string name="app_name">ScanPoint</string>

    <string name="toolbar_text">Hey!</string>
    <string name="toolbar_text_1">Welcome Back</string>

    <string name="no_events_message">There are no events yet.</string>
    <string name="no_events_message_1">Add an Event Now!</string>

    <string name="login_header">Welcome to</string>
    <string name="login_header_1">ScanPoint!</string>
    <string name="login_subheader">STI Global City’s Events App</string>
    <string name="login_cardview_header">Login</string>
    <string name="login_signup">Don\'t have an account yet?</string>


    <string name="signup_cardview_header">Sign Up</string>
    <string name="signup_input_hint_1">Name</string>
    <string name="signup_input_hint_2">Re-Enter Password</string>
    <string name="signup_input_hint_3">Email</string>
    <string name="login_message">Login to your account</string>


    <string name="input_hint_1">Student No.</string>
    <string name="input_hint_2">Password</string>

    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_rewards">Rewards</string>
    <string name="nav_notifications">Notifications</string>

    <string name="btn_cancel">CANCEL</string>
    <string name="btn_add_event">ADD EVENT</string>
    <string name="input_hint_3">Venue</string>
    <string name="input_hint_4"> Event Date</string>
    <string name="input_hint_5">Event Name</string>

    <string name="event_sample_1">Christmas Party</string>
    <string name="event_sample_2">13/12/2024</string>
    <string name="event_sample_3">Gym</string>
    <string name="btn_back">BACK</string>






    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>