<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/dark_yellow"
    android:layout_height="match_parent"
    tools:context=".activities.EventDetailsActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/event_img"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toTopOf="@id/cardView_Event"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:src="@drawable/flipped_event_img"
        android:layout_marginTop="130dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@id/cardView_Event"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_Event"
        android:layout_width="match_parent"
        android:layout_height="710dp"
        android:layout_marginTop="250dp"
        app:cardCornerRadius="41dp"
        android:backgroundTint="@color/blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_event_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_sample_1"
                android:fontFamily="@font/inter_extrabold"
                android:textColor="@color/yellow"
                android:textSize="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="30dp"
                app:layout_constraintBottom_toTopOf="@id/cardView_qr"/>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_qr"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@id/tv_event_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:layout_width="280dp"
                    android:layout_height="280dp"
                    android:layout_gravity="center"
                    android:src="@drawable/qr_sample"/>

            </androidx.cardview.widget.CardView>

           <LinearLayout
               android:id="@+id/ll_event_date"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               app:layout_constraintTop_toBottomOf="@id/cardView_qr"
               android:layout_marginTop="40dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent">
               <ImageView
                   android:src="@drawable/calendar"
                   android:layout_width="20dp"
                   android:layout_height="20dp"
                   app:tint="@color/gray"
                   android:layout_gravity="center"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/event_sample_2"
                   android:fontFamily="@font/inter_bold"
                   android:textColor="@color/gray"
                   android:textSize="18sp"
                   android:layout_gravity="center"
                   android:layout_marginStart="20dp"/>

           </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/ll_event_date"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/map_pin"
                    app:tint="@color/gray"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_sample_3"
                    android:fontFamily="@font/inter_bold"
                    android:textColor="@color/gray"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"/>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add_event"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="100dp"
                android:background="@drawable/bg_button_yellow"
                android:fontFamily="@font/inter_bold"
                android:text="@string/btn_back"
                android:textColor="@color/blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>